# virtual_labs_api

./: .gitignore  README.md  openapi.json  openapi.yaml  pyproject.toml
virtual_labs/: api.py
