[tool.poetry]
name = "virtual-labs"
version = "0.1.0"
description = ""
authors = ["Dinika Saxena <dinikasaxenas@gmail.com>"]
readme = "README.md"
packages = [{include = "virtual_labs"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.110.0"}
uvicorn = "^0.27.1"


[tool.poetry.group.dev.dependencies]
ruff = "^0.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
